--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 20px;
 }
 
 .icon {
@@ -63,4 +64,25 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-weight: bold;
+  margin-left: 25px;
+  margin-right: 130px;
+}
+
+.head {
+  display: flex;
+  font-size: 17px;
+}
+
+.text,
+.continue,
+.cancel {
+  margin-left: 69px;
+}
+
+.button {
+  margin-top: 20px;
 }
