--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -24,4 +28,64 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color:gray;
+}
+
+.header {
+  display: flex;
+  flex: 1;
+  margin-bottom: 100px;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+.header .left-links {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.header .right-links {
+  display: flex;
+  gap: 10px;
+  margin-right:  30px;
+}
+
+.footer {
+  display: flex;
+  background-color: #eeeeee;
+  padding: 10px;
+  margin-top: auto;
+  justify-content: space-between;
+}
+
+.footer .left-links{
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.footer .right-links{
+  display: flex;
+  gap: 10px;
+  margin-right:  30px;
+}
+
+.buttons{
+  padding: 5px;
+  margin-bottom: 150px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
